readme.md added

--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
                     <p>Sprog: dansk</p>
                 </div>
                 <div class="btn_header">
-                    <a href="https://www.zenegy.com">Gå til Zenegy</a>
+                    <a href="../html/vores_produkter.html">Gå til Zenegy</a>
                 </div>
             </div>
         </div>
